--- a/PAUP_QA-master/QA/Views/App/BrisiKategoriju.cshtml
+++ b/PAUP_QA-master/QA/Views/App/BrisiKategoriju.cshtml
@@ -2,6 +2,11 @@
 @{
     Layout = null;
     ViewBag.Title = "Brisanje kategorije";
+    AjaxOptions ajaxOpt = new AjaxOptions()
+    {
+        HttpMethod = "POST",
+        OnBegin = "prozor"
+    };
 }
 
 <!DOCTYPE html>
@@ -10,33 +15,70 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <title>@ViewBag.Title</title>
 </head>
 <body>
+    <div id="sakrij">
+    </div>
     <header>
         <nav>
             <ul>
-                <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
+                @if (TempData["dosaoSa"] != null)
+                {
+                    <li><a href='@TempData["dosaoSa"]'>Povratak</a></li>
+                }
+                else
+                {
+                    <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
+                }
             </ul>
         </nav>
     </header>
 
     <section class="body">
-        <section class="form-section">
-            <p>Jeste li sigurni da želite obrisati @Model.kategorija? Ovime ćete obrisati sva pitanja iz kategorije @Model.kategorija!</p>
-            @using (Html.BeginForm())
-            {
+        <section class="form-section" style="padding:0;">
+            <div id="poruka">
+                <div id="poruka_zaglavlje">
+                    <a href='@Url.Action("Index", "App")'>
+                        <span id="zatvori">&times;</span>
+                    </a>
+                </div>
+                <div id="poruka_tekst"></div>
+            </div>
+            <div class="alert alert-danger" role="alert">
+                <p>Jeste li sigurni da želite obrisati "@Model.kategorija"? Ovime ćete obrisati sva pitanja iz kategorije "@Model.kategorija"!</p>
+                @using (Ajax.BeginForm(ajaxOpt))
+                {
 
-                @Html.AntiForgeryToken()
-                <button name="obrisiKat" type="submit">
-                    Izbriši
-                </button>
-            }
+                    @Html.AntiForgeryToken()
+            <button id="obrisiKat" type="submit">
+                <i class="fa fa-trash-o" aria-hidden="true"></i>
+                Izbriši
+            </button>
+                }
+                </div>
         </section>
     </section>
 </body>
 </html>
+<script type="text/javascript">
+    function prozor() {
+            var poruka = document.getElementById("poruka");
+        document.getElementById("poruka_tekst").innerHTML = "<span id='x-brisi'<i class='fa fa-times-circle-o' aria-hidden='true'></i></span> <br> Kategorija uspješno obrisana!";
+        document.getElementById("poruka_tekst").style.lineHeight = "30px";
+        document.getElementById("poruka_tekst").style.padding = "10px";
+        poruka.classList.add("fadein");
+        poruka.style.zIndex = 3;
+        poruka.style.height = "160%";
+        poruka.style.top = "-50px";
+        var sakrij = document.getElementById("sakrij");
+        sakrij.setAttribute("class", "sakrij");
+        var tipka = document.getElementById("obrisiKat");
+        tipka.disabled = "disabled";
+    }
+
+</script>
 @Styles.Render("/Content/style.css")
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/jqueryval")
