--- a/PAUP_QA-master/QA/Views/App/_PartialKategorija.cshtml
+++ b/PAUP_QA-master/QA/Views/App/_PartialKategorija.cshtml
@@ -16,8 +16,8 @@ else if ((ViewBag.Kategorija != null) && (ViewBag.Pojam == null))
     if ((User.Identity.IsAuthenticated && (User as LogiraniKorisnik).IsInRole(OvlastiKorisnik.Administrator)))
     {
         <div class="category-name">@ViewBag.Kategorija
-        <p style="display:inline-block">@Html.ActionLink("Ažuriraj", "AzurirajKategoriju", new { kat_id = ViewBag.Id },new {@style="color:#fff;margin-left:20%;" })</p>
-        <p style="display:inline-block">@Html.ActionLink("Izbriši", "BrisiKategoriju", new { kat_id = ViewBag.Id }, new { @style = "color:#fff;margin-left:20%;margin-left:40%;" })</p>
+        <p style="display:inline-block">@Html.ActionLink("Ažuriraj", "AzurirajKategoriju", new { kat_id = ViewBag.Id,user_id = (User as LogiraniKorisnik).Id },new {@style="color:#fff;margin-left:20%;" })</p>
+        <p style="display:inline-block">@Html.ActionLink("Izbriši", "BrisiKategoriju", new { kat_id = ViewBag.Id, user_id = (User as LogiraniKorisnik).Id }, new { @style = "color:#fff;margin-left:20%;margin-left:40%;" })</p>
     </div>
     }
     else
